--- a/src/components/select/styles.css
+++ b/src/components/select/styles.css
@@ -15,8 +15,8 @@
     height: 5.6rem;
     margin-top: 0.8rem;
     border-radius: 0.8rem;
-    background-color: var(--color-select-background);
-    border: 1px solid var(--color-line-in-white);
+    background-color: var(--color-input-background) !important;
+    border: 1px solid var(--color-line-in-white) !important;
     outline: 0;
     padding: 0 1.6rem;
     font: 1.6rem Archivo;
@@ -26,7 +26,7 @@
     width: calc(100% - 3.2rem);
     height: 2px;
     content: '';
-    background: var(--color-primary-light);
+    background: var(--color-primary-light) !important;
     position: absolute;
     left: 1.6rem;
     right: 1.6rem;
